--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-<h1>isAclick Photography</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>isAclick Photography</title>
+    <style>
+        body { background-color: #000; color: #fff; font-family: 'Arial', sans-serif; text-align: center; padding: 50px; }
+        img.logo { max-width: 300px; margin-bottom: 20px; }
+        h1 { color: #d4af37; font-size: 2.5em; }
+        .booking-container { margin-top: 40px; background: #111; padding: 20px; border-radius: 10px; border: 1px solid #d4af37; }
+    </style>
+</head>
+<body>
+
+    <img src="logo.png" alt="isAclick Logo" class="logo">
+
+    <h1>Capturing Moments, Creating Memories</h1>
+    <p>Professional Event Photography</p>
+
+    <div class="booking-container">
+        <h2>Book Your Session</h2>
+        </div>
+
+</body>
+</html>
