--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>isAclick Photography</title>
+    <title>isAclick/title>
     <style>
         body { background-color: #000; color: #fff; font-family: 'Arial', sans-serif; text-align: center; padding: 50px; }
         img.logo { max-width: 300px; margin-bottom: 20px; }
@@ -16,10 +16,10 @@
     <img src="logo.png" alt="isAclick Logo" class="logo">
 
     <h1>Capturing Moments, Creating Memories</h1>
-    <p>Professional Event Photography</p>
+    <p>Yes, is a click away.</p>
 
     <div class="booking-container">
-        <h2>Book Your Session</h2>
+        <h2>COMING SOON</h2>
         </div>
 
 </body>
