--- a/index.html
+++ b/index.html
@@ -3,24 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>isAclick</title>
+    <title>isAclick Photography</title>
     <style>
-        body { background-color: #000; color: #fff; font-family: 'Arial', sans-serif; text-align: center; padding: 50px; }
-        img.logo { max-width: 300px; margin-bottom: 20px; }
-        h1 { color: #d4af37; font-size: 2.5em; }
-        .booking-container { margin-top: 40px; background: #111; padding: 20px; border-radius: 10px; border: 1px solid #d4af37; }
-    </style>
-</head>
-<body>
+        /* Base Styles (Desktop) */
+        body { 
+            background-color: #000; 
+            color: #fff; 
+            font-family: 'Arial', sans-serif; 
+            margin: 0; 
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* Centers everything horizontally */
+            min-height: 100vh;
+        }
 
-    <img src="logo.png" alt="isAclick Logo" class="logo">
+        .header {
+            padding: 40px 20px;
+            width: 100%;
+            display: flex;
+            justify-content: center; /* Centers the logo container */
+        }
 
-    <h1>Capturing Moments, Creating Memories</h1>
-    <p></p>
+        img.logo { 
+            max-width: 350px; 
+            height: auto; /* Maintains proportions */
+        }
 
-    <div class="booking-container">
-        <h2>COMING SOON</h2>
-        </div>
+        h1 { color: #d4af37; font-size: 2.5em; margin: 20px 0; }
+        p { font-size: 1.2em; opacity: 0.8; }
 
-</body>
-</html>
+        .booking-container { 
+            margin: 40px 20px; 
+            background: #111; 
+            padding: 30px; 
+            border-radius: 10px; 
+            border: 1px solid #d4af37; 
+            max-width: 800px;
+            width: 90%; /* Responsive width */
+        }
+
+        .pixieset-btn {
+            background-color: #d4af37;
+            color: #000;
+            padding: 15px 35px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            display: inline-block;
+            margin-top: 20px;
+            transition: transform 0.2s;
+        }
+
+        .pixieset-btn:hover {
