--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>isAclick Photography</title>
+    <title>isAclick</title>
     <style>
         /* Base Styles (Desktop) */
         body { 
@@ -74,10 +74,10 @@
     </div>
 
     <h1>Capturing Moments, Creating Memories</h1>
-    <p>Professional Event Photography</p>
+    <p></p>
 
     <div class="booking-container">
-        <h2>Book Your Session</h2>
+        <h2>Book COMING SOON</h2>
         <p>Select your package and add-ons below:</p>
         
         <a href="#" class="pixieset-btn">VIEW PACKAGES & BOOK</a>
