--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <p></p>
 
     <div class="booking-container">
-        <h2>Book COMING SOON</h2>
+        <h2>On-line Booking COMING SOON</h2>
         <p>Select your package and add-ons below:</p>
         
         <a href="#" class="pixieset-btn">VIEW PACKAGES & BOOK</a>
