--- a/index.html
+++ b/index.html
@@ -4,68 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>isAclick</title>
-    <style>
-        /* Base Styles (Desktop) */
-        body { 
-            background-color: #000; 
-            color: #fff; 
-            font-family: 'Arial', sans-serif; 
-            margin: 0; 
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center; /* Centers everything horizontally */
-            min-height: 100vh;
-        }
+<style>
+    /* 1. Base Styles (Mobile-First) */
+    body { 
+        background-color: #000; 
+        color: #fff; 
+        font-family: 'Arial', sans-serif; 
+        margin: 0; 
+        padding: 0;
+        /* Flexbox handles the centering of the entire page content */
+        display: flex;
+        flex-direction: column;
+        align-items: center;    /* Horizontal centering */
+        justify-content: flex-start;
+        min-height: 100vh;
+        text-align: center;     /* Centers all text by default */
+    }
 
-        .header {
-            padding: 40px 20px;
-            width: 100%;
-            display: flex;
-            justify-content: center; /* Centers the logo container */
-        }
+    .header {
+        padding: 40px 20px;
+        width: 100%;
+        display: flex;
+        justify-content: center; /* Ensures logo container is centered */
+    }
 
+    img.logo { 
+        max-width: 80%;         /* Keeps logo from hitting screen edges on mobile */
+        height: auto;
+        display: block;
+        margin: 0 auto;         /* Fallback centering */
+    }
+
+    h1 { 
+        color: #d4af37; 
+        font-size: 1.8em;       /* Optimized for mobile */
+        margin: 20px 15px; 
+    }
+
+    .booking-container { 
+        margin: 20px; 
+        background: #111; 
+        padding: 25px; 
+        border-radius: 10px; 
+        border: 1px solid #d4af37; 
+        width: 85%;             /* Fits small screens comfortably */
+        max-width: 600px;       /* Caps width for desktop */
+    }
+
+    /* 2. Desktop Adjustments (Screens larger than 768px) */
+    @media only screen and (min-width: 768px) {
         img.logo { 
-            max-width: 350px; 
-            height: auto; /* Maintains proportions */
+            max-width: 350px;   /* Larger logo for desktop */
         }
-
-        h1 { color: #d4af37; font-size: 2.5em; margin: 20px 0; }
-        p { font-size: 1.2em; opacity: 0.8; }
-
-        .booking-container { 
-            margin: 40px 20px; 
-            background: #111; 
-            padding: 30px; 
-            border-radius: 10px; 
-            border: 1px solid #d4af37; 
-            max-width: 800px;
-            width: 90%; /* Responsive width */
+        h1 { 
+            font-size: 2.8em;   /* Larger text for desktop */
         }
-
-        .pixieset-btn {
-            background-color: #d4af37;
-            color: #000;
-            padding: 15px 35px;
-            text-decoration: none;
-            border-radius: 5px;
-            font-weight: bold;
-            display: inline-block;
-            margin-top: 20px;
-            transition: transform 0.2s;
+        .booking-container {
+            width: 100%;
         }
-
-        .pixieset-btn:hover { transform: scale(1.05); }
-
-        /* Mobile-Specific Adjustments (Screens smaller than 600px) */
-        @media only screen and (max-width: 600px) {
-            img.logo { 
-                max-width: 250px; /* Shrinks logo slightly for small screens */
-            }
-            h1 { font-size: 1.8em; }
-            body { padding: 20px; }
-        }
-    </style>
+    }
+</style>
 </head>
 <body>
 
