--- a/index.html
+++ b/index.html
@@ -74,12 +74,19 @@
     <h1>Capturing Moments, Creating Memories</h1>
     <p></p>
 
-    <div class="booking-container">
-        <h2>On-line Booking COMING SOON</h2>
-        <p>Select your package and add-ons below:</p>
-        
-        <a href="#" class="pixieset-btn">VIEW PACKAGES & BOOK</a>
+  <div class="booking-container">
+    <h2>Book Your Session</h2>
+    <p>Select your package and add-ons below:</p>
+    
+    <div class="iframe-wrapper" style="position: relative; overflow: hidden; width: 100%; padding-top: 56.25%;">
+        <iframe 
+            src="https://isaclick.pixieset.com/booking" 
+            style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height: 100%; border: none;"
+            title="isAclick Booking"
+            allowfullscreen>
+        </iframe>
     </div>
+</div>
 
 </body>
 </html>
