--- a/index.html
+++ b/index.html
@@ -51,12 +51,28 @@
 
     <h1>Capturing Moments, Creating Memories</h1>
 
-    <div class="booking-section">
-        <iframe 
-            src="https://isaclick.pixieset.com/booking/inquiry" 
-            title="isAclick Booking">
-        </iframe>
-    </div>
+  <div class="booking-section" style="padding: 40px 20px;">
+    <h2 style="color: #fff;">Ready to Book?</h2>
+    <p style="color: #ccc; margin-bottom: 30px;">Select your package and view available dates below.</p>
+    
+    <a href="https://isstime.pixieset.com/booking" 
+       target="_blank" 
+       style="background-color: #d4af37; 
+              color: #000; 
+              padding: 18px 40px; 
+              text-decoration: none; 
+              border-radius: 8px; 
+              font-weight: bold; 
+              font-size: 1.2em; 
+              display: inline-block; 
+              transition: transform 0.2s;">
+        VIEW PACKAGES & BOOK NOW
+    </a>
+    
+    <p style="font-size: 0.9em; color: #666; margin-top: 15px;">
+        (Securely powered by Pixieset)
+    </p>
+</div>
 
 </body>
 </html>
