--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <h2 style="color: #fff;">Ready to Book?</h2>
     <p style="color: #ccc; margin-bottom: 30px;">Select your package and view available dates below.</p>
     
-    <a href="https://isstime.pixieset.com/booking" 
+    <a href="https://isaclick.pixieset.com/booking/inquiry" 
        target="_blank" 
        style="background-color: #d4af37; 
               color: #000; 
