--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <h1>Capturing Moments, Creating Memories</h1>
 
   <div class="booking-section" style="padding: 40px 20px;">
-    <h2 style="color: #fff;">Ready to Book?</h2>
-    <p style="color: #ccc; margin-bottom: 30px;">Select your package and view available dates below.</p>
+    <h2 style="color: #fff;"</h2>
+    <p style="color: #ccc; margin-bottom: 30px;">
     
     <a href="https://isaclick.pixieset.com/booking/inquiry" 
        target="_blank" 
@@ -66,7 +66,7 @@
               font-size: 1.2em; 
               display: inline-block; 
               transition: transform 0.2s;">
-        VIEW PACKAGES & BOOK NOW
+        ON-LINE BOOKING COMING SOON
     </a>
     
     <p style="font-size: 0.9em; color: #666; margin-top: 15px;">
