--- a/index.html
+++ b/index.html
@@ -42,6 +42,181 @@
             iframe { height: 1200px; } /* Extra height for mobile forms */
         }
     </style>
+<style>
+  /* Professional Form Styling */
+  .contact-container {
+    max-width: 600px;
+    margin: 40px auto;
+    padding: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    background: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  }
+
+  .fs-form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  fieldset {
+    border: none;
+    padding: 0;
+    margin: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 15px;
+  }
+
+  .fs-field {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+
+  .col-span-full {
+    grid-column: span 2;
+  }
+
+  .fs-label {
+    font-weight: 600;
+    font-size: 14px;
+    color: #333;
+  }
+
+  .fs-description {
+    font-size: 12px;
+    color: #666;
+    margin-top: 4px;
+  }
+
+  .fs-input, .fs-textarea, .fs-select {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+  }
+
+  .fs-textarea {
+    height: 80px;
+    resize: vertical;
+  }
+
+  .fs-checkbox-group {
+    margin-top: 10px;
+  }
+
+  .fs-checkbox-field {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 5px;
+  }
+
+  .fs-button {
+    background-color: #24292e; /* GitHub Dark Gray */
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 6px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background 0.3s;
+  }
+
+  .fs-button:hover {
+    background-color: #0366d6;
+  }
+
+  /* Mobile Responsive */
+  @media (max-width: 480px) {
+    fieldset {
+      grid-template-columns: 1fr;
+    }
+    .col-span-full {
+      grid-column: span 1;
+    }
+  }
+</style>
+
+<div class="contact-container">
+  <h2>Inquiry Form</h2>
+  <form
+    action="https://formspree.io/f/maqnrygl"
+    class="fs-form fs-layout__2-column"
+    target="_top"
+    method="POST"
+  >
+    <fieldset>
+      <div class="fs-field">
+        <label class="fs-label" for="first-name">First Name</label>
+        <input class="fs-input" id="first-name" name="first-name" required />
+      </div>
+      <div class="fs-field">
+        <label class="fs-label" for="last-name">Last Name</label>
+        <input class="fs-input" id="last-name" name="last-name" required />
+        <p class="fs-description">We'll use this to generate your pass.</p>
+      </div>
+    </fieldset>
+
+    <fieldset>
+      <div class="fs-field">
+        <label class="fs-label" for="email">Email</label>
+        <input type="email" class="fs-input" id="email" name="email" required />
+      </div>
+      <div class="fs-field">
+        <label class="fs-label" for="number">Contact Number</label>
+        <input class="fs-input" id="number" name="number" placeholder="(000) 000-0000" required />
+      </div>
+    </fieldset>
+
+    <div class="fs-field col-span-full">
+      <label class="fs-label" for="address">Address (optional)</label>
+      <textarea class="fs-textarea" id="address" name="address"></textarea>
+    </div>
+
+    <fieldset>
+      <div class="fs-field">
+        <label class="fs-label">Attendance Dates</label>
+        <div class="fs-checkbox-group">
+          <div class="fs-checkbox-field">
+            <input class="fs-checkbox" id="dates-day-1" name="dates" type="checkbox" value="day-1" />
+            <label class="fs-label" for="dates-day-1">Day 1</label>
+          </div>
+          <div class="fs-checkbox-field">
+            <input class="fs-checkbox" id="dates-day-2" name="dates" type="checkbox" value="day-2" />
+            <label class="fs-label" for="dates-day-2">Day 2</label>
+          </div>
+          <div class="fs-checkbox-field">
+            <input class="fs-checkbox" id="dates-day-3" name="dates" type="checkbox" value="day-3" />
+            <label class="fs-label" for="dates-day-3">Day 3</label>
+          </div>
+        </div>
+      </div>
+      <div class="fs-field">
+        <label class="fs-label" for="tshirt-size">T-shirt size</label>
+        <select class="fs-select" id="tshirt-size" name="size">
+          <option value="s">S</option>
+          <option value="m">M</option>
+          <option value="l">L</option>
+          <option value="xl">XL</option>
+        </select>
+      </div>
+    </fieldset>
+
+    <div class="fs-button-group">
+      <button class="fs-button" type="submit">Submit Inquiry</button>
+    </div>
+  </form>
+</div>
+
+
+
+
+
+
+    
 </head>
 <body>
 
