--- a/index.html
+++ b/index.html
@@ -188,29 +188,28 @@
 
     <fieldset>
       <div class="fs-field">
-        <label class="fs-label">Attendance Dates</label>
+        <label class="fs-label">How many hours?</label>
         <div class="fs-checkbox-group">
           <div class="fs-checkbox-field">
-            <input class="fs-checkbox" id="dates-day-1" name="dates" type="checkbox" value="day-1" />
-            <label class="fs-label" for="dates-day-1">Day 1</label>
+            <input class="fs-checkbox" id="dates-hr-1" name="dates" type="checkbox" value="hr-1" />
+            <label class="fs-label" for="dates-hr-1"> 1hr</label>
           </div>
           <div class="fs-checkbox-field">
-            <input class="fs-checkbox" id="dates-day-2" name="dates" type="checkbox" value="day-2" />
-            <label class="fs-label" for="dates-day-2">Day 2</label>
+            <input class="fs-checkbox" id="dates-hr-2" name="dates" type="checkbox" value="hr-2" />
+            <label class="fs-label" for="dates-hr-2"> 2hrs</label>
           </div>
           <div class="fs-checkbox-field">
-            <input class="fs-checkbox" id="dates-day-3" name="dates" type="checkbox" value="day-3" />
-            <label class="fs-label" for="dates-day-3">Day 3</label>
+            <input class="fs-checkbox" id="dates-hr-3" name="dates" type="checkbox" value="hr-3" />
+            <label class="fs-label" for="dates-hr-3">3+ hrs</label>
           </div>
         </div>
       </div>
       <div class="fs-field">
-        <label class="fs-label" for="tshirt-size">T-shirt size</label>
-        <select class="fs-select" id="tshirt-size" name="size">
-          <option value="s">S</option>
-          <option value="m">M</option>
-          <option value="l">L</option>
-          <option value="xl">XL</option>
+        <label class="fs-label" for="tshirt-size">Opstions</label>
+        <select class="fs-select" id="options" name="size">
+          <option value="Digital Onlu">Digital Only</option>
+          <option value="Digitalandprints">Digital and Prints</option>
+       
         </select>
       </div>
     </fieldset>
