--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </fieldset>
 
     <div class="fs-field col-span-full">
-      <label class="fs-label" for="address">Address (optional)</label>
+      <label class="fs-label" for="address">Comments </label>
       <textarea class="fs-textarea" id="address" name="address"></textarea>
     </div>
 
@@ -205,7 +205,7 @@
         </div>
       </div>
       <div class="fs-field">
-        <label class="fs-label" for="tshirt-size">Opstions</label>
+        <label class="fs-label" for="tshirt-size">Options</label>
         <select class="fs-select" id="options" name="size">
           <option value="Digital Onlu">Digital Only</option>
           <option value="Digitalandprints">Digital and Prints</option>
