--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             width: 90%;
             margin: 0 auto 60px auto;
             padding: 40px;
-            background-color: #ffffff !important; /* Forces white box */
+            background-color:#000000 !important; /* Forces white box */
             border-radius: 15px;
             color: #333333 !important; /* Forces dark text for readability */
             box-sizing: border-box;
