--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         /* 3. FORM ELEMENTS */
         .form-title {
-            color: #dddddd !important; /* Light gray title as seen in your screenshot */
+            color: #000000 !important; /* Light gray title as seen in your screenshot */
             font-size: 26px;
             margin: 0 0 25px 0;
             font-weight: bold;
