Change background color to gold and update comment

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             width: 90%;
             margin: 0 auto 60px auto;
             padding: 40px;
-            background-color: #ffffff !important; /* Set to white for readability */
+            background-color: #d4af37!important; /* Set to black for readability */
             border: 2px solid #d4af37; /* GOLD BORDER ADDED HERE */
             border-radius: 15px;
             color: #333333 !important; 
