--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);
+            background: #000000;
             color: #fff;
             min-height: 100vh;
             overflow-x: hidden;
@@ -41,7 +41,6 @@
         img.logo {
             max-width: 300px;
             height: auto;
-            filter: drop-shadow(0 0 20px rgba(212, 175, 55, 0.3));
         }
 
         /* Content Section */
