Update language links in index.html

--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
         <h1>Select your language / Seleccione su idioma</h1>
 
         <div class="language-options">
-            <a href="isaclick.html" class="lang-btn">
+            <a href="en.html" class="lang-btn">
                 <span class="lang-title">English</span>
                 <span class="lang-sub">Click here to continue</span>
             </a>
 
             <!-- Linking to isaclick_es.html (needs to be created) -->
-            <a href="isaclick_es.html" class="lang-btn">
+            <a href="es.html" class="lang-btn">
                 <span class="lang-title">Español</span>
                 <span class="lang-sub">Haga clic aquí para continuar</span>
             </a>
