--- a/es.html
+++ b/es.html
@@ -1,1 +1,588 @@
+<!DOCTYPE html>
+<html lang="es">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>isAclick | Solicitud</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #000000;
+            color: #fff;
+            min-height: 100vh;
+            overflow-x: hidden;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        /* Header Section */
+        .header {
+            text-align: center;
+            margin-bottom: 40px;
+            animation: fadeInDown 1s ease-out;
+        }
+
+        img.logo {
+            max-width: 300px;
+            height: auto;
+        }
+
+        /* Content Section */
+        .content-section {
+            text-align: center;
+            margin-bottom: 50px;
+            animation: fadeInUp 1s ease-out 0.3s both;
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            font-weight: 600;
+            background: linear-gradient(135deg, #d4af37 0%, #f4d47c 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            margin-bottom: 30px;
+            line-height: 1.3;
+        }
+
+        .tagline {
+            font-size: 1.2rem;
+            color: #b0b0b0;
+            margin-bottom: 15px;
+        }
+
+        .premium-text {
+            color: #e0e0e0;
+        }
+
+        .guarantee-highlight {
+            color: #d4af37;
+            font-weight: 600;
+            font-size: 1.3rem;
+            padding: 12px 25px;
+            background: rgba(212, 175, 55, 0.1);
+            border-radius: 50px;
+            border: 2px solid rgba(212, 175, 55, 0.3);
+            display: inline-block;
+            margin-top: 10px;
+            animation: pulse 2s ease-in-out infinite;
+        }
+
+        @keyframes pulse {
+
+            0%,
+            100% {
+                box-shadow: 0 0 20px rgba(212, 175, 55, 0.2);
+            }
+
+            50% {
+                box-shadow: 0 0 30px rgba(212, 175, 55, 0.4);
+            }
+        }
+
+        /* CTA Section */
+        .request-btn-container {
+            margin-bottom: 50px;
+            animation: fadeInUp 1s ease-out 0.6s both;
+        }
+
+        .request-btn {
+            background: linear-gradient(135deg, #d4af37 0%, #b8942a 100%);
+            color: #000;
+            font-size: 1.3rem;
+            font-weight: 600;
+            padding: 18px 60px;
+            border: none;
+            border-radius: 50px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 10px 30px rgba(212, 175, 55, 0.3);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .request-btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 15px 40px rgba(212, 175, 55, 0.5);
+            background: linear-gradient(135deg, #f4d47c 0%, #d4af37 100%);
+        }
+
+        .request-btn:active {
+            transform: translateY(-1px);
+        }
+
+        /* Features Section */
+        .features {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 30px;
+            margin-bottom: 60px;
+            width: 100%;
+            max-width: 900px;
+            animation: fadeInUp 1s ease-out 0.9s both;
+        }
+
+        .feature-card {
+            background: rgba(255, 255, 255, 0.03);
+            border: 1px solid rgba(212, 175, 55, 0.2);
+            border-radius: 15px;
+            padding: 30px;
+            text-align: center;
+            transition: all 0.3s ease;
+            backdrop-filter: blur(10px);
+        }
+
+        .feature-card:hover {
+            transform: translateY(-5px);
+            border-color: rgba(212, 175, 55, 0.5);
+            box-shadow: 0 10px 30px rgba(212, 175, 55, 0.2);
+        }
+
+        .feature-icon {
+            font-size: 2.5rem;
+            margin-bottom: 15px;
+        }
+
+        .feature-title {
+            color: #d4af37;
+            font-size: 1.2rem;
+            margin-bottom: 10px;
+            font-weight: 600;
+        }
+
+        .feature-description {
+            color: #b0b0b0;
+            font-size: 0.95rem;
+            line-height: 1.6;
+        }
+
+        /* Form Container */
+        .contact-container {
+            max-width: 700px;
+            width: 90%;
+            margin: 0 auto 60px auto;
+            padding: 50px;
+            background: linear-gradient(135deg, rgba(212, 175, 55, 0.95) 0%, rgba(212, 175, 55, 0.98) 100%);
+            border: 2px solid #f4d47c;
+            border-radius: 20px;
+            color: #000;
+            box-shadow: 0 20px 60px rgba(212, 175, 55, 0.4);
+            display: none;
+        }
+
+        .form-title {
+            color: #1a1a1a;
+            font-size: 2rem;
+            margin: 0 0 35px 0;
+            font-weight: 700;
+            text-align: center;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+
+        .fs-form {
+            display: flex;
+            flex-direction: column;
+            gap: 25px;
+        }
+
+        fieldset {
+            border: none;
+            padding: 0;
+            margin: 0;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+        }
+
+        .fs-field {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+
+        .col-span-full {
+            grid-column: span 2;
+        }
+
+        .fs-label {
+            font-weight: 700;
+            font-size: 14px;
+            color: #1a1a1a;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+
+        .fs-description {
+            font-size: 11px;
+            color: #444;
+            margin-top: 4px;
+            font-style: italic;
+        }
+
+        .fs-input,
+        .fs-textarea,
+        .fs-select {
+            width: 100%;
+            padding: 14px;
+            border: 2px solid rgba(0, 0, 0, 0.2);
+            border-radius: 8px;
+            font-size: 14px;
+            background-color: #fff;
+            color: #333;
+            transition: all 0.3s ease;
+            font-family: inherit;
+        }
+
+        .fs-input:focus,
+        .fs-textarea:focus,
+        .fs-select:focus {
+            outline: none;
+            border-color: #1a1a1a;
+            box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.1);
+        }
+
+        .fs-textarea {
+            height: 120px;
+            resize: vertical;
+        }
+
+        .bottom-row {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 30px;
+            margin-top: 10px;
+        }
+
+        .checkbox-group {
+            text-align: left;
+            font-size: 14px;
+        }
+
+        .checkbox-item {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 10px;
+            padding: 8px;
+            border-radius: 6px;
+            transition: background-color 0.2s ease;
+        }
+
+        .checkbox-item:hover {
+            background-color: rgba(255, 255, 255, 0.3);
+        }
+
+        .checkbox-item input[type="checkbox"] {
+            width: 18px;
+            height: 18px;
+            cursor: pointer;
+        }
+
+        .fs-button-group {
+            display: flex;
+            gap: 15px;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        .fs-button {
+            background-color: #1a1a1a;
+            color: #d4af37;
+            padding: 16px 50px;
+            border: 2px solid #1a1a1a;
+            border-radius: 50px;
+            font-weight: 700;
+            font-size: 15px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .fs-button:hover {
+            background-color: #000;
+            color: #f4d47c;
+            transform: translateY(-2px);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+        }
+
+        .fs-button-cancel {
+            background-color: transparent;
+            border: 2px solid #444;
+            color: #444;
+        }
+
+        .fs-button-cancel:hover {
+            background-color: #8b0000;
+            border-color: #8b0000;
+            color: #fff;
+        }
+
+        /* Animations */
+        @keyframes fadeInDown {
+            from {
+                opacity: 0;
+                transform: translateY(-30px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes popIn {
+            0% {
+                opacity: 0;
+                transform: scale(0.8) translateY(20px);
+            }
+
+            100% {
+                opacity: 1;
+                transform: scale(1) translateY(0);
+            }
+        }
+
+        .pop-in {
+            animation: popIn 0.6s cubic-bezier(0.22, 1, 0.36, 1) forwards;
+        }
+
+        /* Mobile Responsiveness */
+        @media (max-width: 768px) {
+            img.logo {
+                max-width: 220px;
+            }
+
+            h1 {
+                font-size: 1.8rem;
+            }
+
+            .tagline {
+                font-size: 1rem;
+            }
+
+            .guarantee-highlight {
+                font-size: 1.1rem;
+                padding: 10px 20px;
+            }
+
+            .request-btn {
+                font-size: 1.1rem;
+                padding: 15px 40px;
+            }
+
+            .features {
+                grid-template-columns: 1fr;
+                margin-bottom: 40px;
+            }
+
+            fieldset,
+            .bottom-row {
+                grid-template-columns: 1fr;
+            }
+
+            .col-span-full {
+                grid-column: span 1;
+            }
+
+            .contact-container {
+                padding: 30px 20px;
+            }
+
+            .form-title {
+                font-size: 1.5rem;
+            }
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <!-- Header with Logo -->
+        <div class="header">
+            <img src="logo.png" alt="isAclick Logo" class="logo">
+        </div>
+
+        <!-- Main Content -->
+        <div class="content-section">
+            <h1>Capturando Momentos,<br>Creando Recuerdos</h1>
+
+            <p class="tagline">
+                <span class="premium-text">Experiencia Premium.</span>
+            </p>
+
+            <div class="guarantee-highlight">
+                Mejoramos Cualquier Precio
+            </div>
+        </div>
+
+        <!-- CTA Button -->
+        <div class="request-btn-container" id="btnContainer">
+            <button class="request-btn" onclick="showForm()">Solicitar Presupuesto</button>
+        </div>
+
+        <!-- Features (shown before form is opened) -->
+        <div class="features" id="featuresSection">
+            <div class="feature-card">
+                <div class="feature-icon">📸</div>
+                <div class="feature-title">Calidad Profesional</div>
+                <div class="feature-description">Equipos de primera y fotógrafos expertos para resultados impresionantes
+                </div>
+            </div>
+
+            <div class="feature-card">
+                <div class="feature-icon">⚡</div>
+                <div class="feature-title">Entrega Rápida</div>
+                <div class="feature-description">Tiempos de entrega rápidos sin comprometer la calidad</div>
+            </div>
+
+            <div class="feature-card">
+                <div class="feature-icon">💎</div>
+                <div class="feature-title">Mejor Precio Garantizado</div>
+                <div class="feature-description">Servicio premium a tarifas competitivas que no encontrará en otro lugar
+                </div>
+            </div>
+        </div>
+
+        <!-- Inquiry Form -->
+        <div class="contact-container" id="contactForm">
+            <div class="form-title">Formulario de Solicitud</div>
+
+            <form action="https://formspree.io/f/maqnrygl" class="fs-form" method="POST">
+
+                <fieldset>
+                    <div class="fs-field">
+                        <label class="fs-label">Nombre</label>
+                        <input class="fs-input" name="first-name" required>
+                    </div>
+                    <div class="fs-field">
+                        <label class="fs-label">Apellido</label>
+                        <input class="fs-input" name="last-name" required>
+                        <p class="fs-description">Usaremos esto para generar su pase.</p>
+                    </div>
+                </fieldset>
+
+                <fieldset>
+                    <div class="fs-field">
+                        <label class="fs-label">Correo Electrónico</label>
+                        <input type="email" class="fs-input" name="email" required>
+                    </div>
+                    <div class="fs-field">
+                        <label class="fs-label">Número de Contacto</label>
+                        <input class="fs-input" name="phone" placeholder="(000) 000-0000" required>
+                    </div>
+                </fieldset>
+
+                <div class="fs-field col-span-full">
+                    <label class="fs-label">Comentarios</label>
+                    <textarea class="fs-textarea" name="comments"
+                        placeholder="Cuéntenos sobre su evento y necesidades fotográficas..."></textarea>
+                </div>
+
+                <div class="bottom-row">
+                    <div class="fs-field">
+                        <label class="fs-label">¿Cuántas horas?</label>
+                        <div class="checkbox-group">
+                            <div class="checkbox-item">
+                                <input type="checkbox" name="hr" value="1hr" id="hr1">
+                                <label for="hr1">1 hora</label>
+                            </div>
+                            <div class="checkbox-item">
+                                <input type="checkbox" name="hr" value="2hrs" id="hr2">
+                                <label for="hr2">2 horas</label>
+                            </div>
+                            <div class="checkbox-item">
+                                <input type="checkbox" name="hr" value="3+hrs" id="hr3">
+                                <label for="hr3">3+ horas</label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="fs-field">
+                        <label class="fs-label">Opciones de Paquete</label>
+                        <select class="fs-select" name="package">
+                            <option value="Digital Only">Solo Digital</option>
+                            <option value="Digital and Prints">Digital e Impresiones</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="fs-button-group">
+                    <button class="fs-button" type="submit">Enviar Solicitud</button>
+                    <button class="fs-button fs-button-cancel" type="button" onclick="hideForm()">Cancelar</button>
+                </div>
+
+            </form>
+        </div>
+    </div>
+
+    <script>
+        function showForm() {
+            const btnContainer = document.getElementById('btnContainer');
+            const form = document.getElementById('contactForm');
+            const features = document.getElementById('featuresSection');
+
+            // Hide the button and features
+            btnContainer.style.display = 'none';
+            features.style.display = 'none';
+
+            // Show form with animation
+            form.classList.remove('pop-in');
+            void form.offsetWidth;
+            form.style.display = 'block';
+            form.classList.add('pop-in');
+
+            // Scroll to form smoothly
+            setTimeout(() => {
+                form.scrollIntoView({ behavior: 'smooth', block: 'center' });
+            }, 100);
+        }
+
+        function hideForm() {
+            const btnContainer = document.getElementById('btnContainer');
+            const form = document.getElementById('contactForm');
+            const features = document.getElementById('featuresSection');
+
+            // Hide the form
+            form.style.display = 'none';
+
+            // Show the button and features again
+            btnContainer.style.display = 'block';
+            features.style.display = 'grid';
+
+            // Scroll back to top
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        }
+    </script>
+</body>
+
+</html>
