--- a/en.html
+++ b/en.html
@@ -455,13 +455,13 @@
             <div class="feature-card">
                 <div class="feature-icon">📸</div>
                 <div class="feature-title">Professional Quality</div>
-                <div class="feature-description">Top-tier equipment and expert photographers for stunning results</div>
+                <div class="feature-description">for stunning results</div>
             </div>
 
             <div class="feature-card">
                 <div class="feature-icon">⚡</div>
-                <div class="feature-title">Fast Delivery</div>
-                <div class="feature-description">Quick turnaround times without compromising on quality</div>
+                <div class="feature-title">Fast Install </div>
+                <div class="feature-description"> without compromising on quality</div>
             </div>
 
             <div class="feature-card">
