Update feature titles and descriptions in es.html

--- a/es.html
+++ b/es.html
@@ -455,14 +455,14 @@
             <div class="feature-card">
                 <div class="feature-icon">📸</div>
                 <div class="feature-title">Calidad Profesional</div>
-                <div class="feature-description">Equipos de primera y fotógrafos expertos para resultados impresionantes
+                <div class="feature-description">para resultados impresionantes
                 </div>
             </div>
 
             <div class="feature-card">
                 <div class="feature-icon">⚡</div>
-                <div class="feature-title">Entrega Rápida</div>
-                <div class="feature-description">Tiempos de entrega rápidos sin comprometer la calidad</div>
+                <div class="feature-title">Instalacion Rápida</div>
+                <div class="feature-description">sin comprometer la calidad</div>
             </div>
 
             <div class="feature-card">
